# json_parser

./: .gitignore  Cargo.toml  Readme.md
json_parser_app/: Cargo.toml
json_parser_app/src/: main.rs
json_parser_lib/: Cargo.toml
json_parser_lib/src/: lib.rs  parser.rs  utils.rs
json_parser_lib/src/parser/: colors.rs  strings.rs
json_parser_lib/src/utils/: cache.rs  json.rs
resources/: colors.json  colors2.json  strings.json  strings2.json
